...
        ),
        child: Row(
          children: [
            Expanded(
              child: Semantics(
                button: true,
                label: 'Take a note',
                excludeSemantics: true,
                child: InkWell(
                  onTap: onTap,
                  borderRadius: const BorderRadius.horizontal(
                    left: Radius.circular(Radii.bar),
                  ),
...
